--- a/styles.css
+++ b/styles.css
@@ -8,26 +8,46 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  color: #333;
+  background: #f5f5f5;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.container {
-  background-color: red;
-  border: 0px solid black;
-  display: flex;
-  flex-wrap:wrap;
-  /* justify-content: space-evenly;
-  align-items:center; */
+header {
   margin: 20px;
-  height: 400px;
-  width: 400px
+}
+
+.input {
+  display: flex;
+  align-items: center;
+}
+
+input {
+  margin: 5px;
+  padding: 3px;;
+  width: 40px;
+  text-align: center;
+}
+
+button {
+  padding: 3px;
+  margin: 5px;
 }
 
 .grid {
-  border: 0.1px solid black;
-  /* background-color: red; */
-  height: 100px;
-  width: 100px
+  background-color: grey;
+  border: gray 5px solid;
+  width: 600px;
+  height: 600px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+}
+
+.grid-square {
+  background: white;
+  color: #f5f5f5;
+  border: black   0.1px solid;
 }
