--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
-  background: #f5f5f5;
+  background: rgb(245, 245, 245);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,9 +19,31 @@ header {
   margin: 20px;
 }
 
-.input {
+.main {
   display: flex;
   align-items: center;
+}
+
+.sidebar {
+  background-color: lightgray;
+  box-shadow: 0px 0px 10px 5px #888888;
+  height: 600px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px;
+  padding: 20px;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+.grid-input {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
 }
 
 input {
@@ -34,13 +56,34 @@ input {
 button {
   padding: 3px;
   margin: 5px;
+  width: 90px;
+}
+
+.color-button{
+  color: white;
+}
+
+.black {
+  background-color: black;
+}
+
+.red {
+  background-color: red;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.green {
+  background-color: green;
 }
 
 .grid {
   box-shadow: 0px 0px 10px 5px #888888;
   width: 600px;
   height: 600px;
-  margin: 20px auto;
+  /* margin: 20px auto; */
   display: grid;
   grid-template-columns: repeat(16, 1fr);
 }
