--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,11 @@ button {
   background-color: green;
 }
 
+.white {
+  background-color: white;
+  color: black;
+}
+
 .grid {
   box-shadow: 0px 0px 10px 5px #888888;
   width: 600px;
